# lcad

./: .env.example  .gitignore  README.md  pyproject.toml  test.py
notebooks/: langchain_academy.ipynb
utils/: llm_provider.py
